2010-04-15 Sergio Martin <sergio.martin@artica.es>

        * godmode/users/configure_user.php: fixed bug 2987162. Validation 
	  of create a user with User ID null

2010-04-15 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_html.php: added check new attribute "styleTable" to
	object table, this is for pass the style table.

2010-04-14 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: fixed bug in the function
	"format_array_to_update_sql" when the field yet escaped.

2010-04-14 Sergio Martin <sergio.martin@artica.es>

	* godmode/users/user_list.php: fixed bug 2987177. Wrong index was associated 
	  with the delete icon in the users list.
	
2010-04-14 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: fixed bug in the function "get_db_value_filter"
	when the field's name is a reserve word of mysql crash.

2010-04-14 Sergio Martin <sergio.martin@artica.es>

	* include/javascript/pandora_modules.js: Typo fix for bug 2953348


2010-04-14 Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.php: Controled the sucessful of the
	  create an alarm to audit it for bug 2987006

2010-04-14 Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.php,
	godmode/alerts/alert_list.list.php: Changed a button between the files 
	  to clean source code 

2010-04-14 Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/map_builder.php: Added Delete visual console
          for Bug 2986523 

2010-04-14 Sergio Martin <sergio.martin@artica.es>

	* ChangeLog: Updated the Changlog with the last forget commit 

2010-04-13 Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/map_builder.php: Added Copy visual console
          (map clonation) for Pending task 2726277 

2010-04-12 Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.php: Added Create button for
	Feature Request 2985798

2010-04-12  Junichi Satoh  <junichi@rworks.jp>
